Fixed nav bar on mobile

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -8,12 +8,35 @@ $nav-padding: 1px 0
     position: fixed
     top: 0
     left: 50%
-    transform: translateX(-50%) // Centers the navigation horizontally
-    width: 100% // Ensures the navigation spans the full width
-    max-width: 1200px // Optional: limits the width of the nav container
+    transform: translateX(-50%)
+    width: 100%
+    max-width: 1200px
     padding: $nav-padding
-    z-index: 1000 // Ensures the navigation stays on top of other content
+    z-index: 1000
     background-color: $background-color
+
+    > .list
+        list-style: none
+        margin: 0 auto
+        padding: 0
+        display: flex
+        justify-content: center
+
+        > .item
+            display: inline-block
+            margin-right: $nav-spacing
+
+            > .link
+                display: inline-block
+                font-weight: 300
+                font-size: $nav-font-size
+                padding: 20px 10px
+                text-decoration: none
+                color: $nav-color
+
+                &:hover
+                    color: $nav-hover-color
+                    text-decoration: underline
 
     @media #{$mobile}
         > .list
@@ -31,46 +54,3 @@ $nav-padding: 1px 0
             font-size: 1.8rem
             padding: 15px 8px
             text-align: center
-
-    > .list
-        list-style: none
-        margin: 0 auto
-        padding: 0
-        display: flex
-        justify-content: center
-
-        @media #{$mobile}
-                padding: 8px 0
-                font-size: 1.1rem
-
-        > .item
-            display: inline-block
-            margin-right: $nav-spacing
-
-        > .item > .link
-            display: inline-block
-            font-weight: 300
-            font-size: $nav-font-size
-            padding: 20px 10px
-            text-decoration: none
-            color: $nav-color
-
-            &:hover
-                color: $nav-hover-color
-                text-decoration: underline
-    
-.nav .list .item
-    margin: 0 // Remove any extra margin
-    padding: 0 // Remove padding around the item
-
-.nav .list .link
-    padding: 5px 10px // Reduce link padding for smaller height
-    line-height: 1.2 // Adjust line height to control vertical alignment
-    font-size: 1.4rem // Adjust font size if needed
-    text-decoration: none
-
-.nav .list .link:hover
-    color: $delta // Hover color
-
-.nav .list .link.active
-    color: $gama
